# Multithread

./: README.md
Task_1/: CMakeLists.txt  Queue_class.cpp  Queue_class.h  Reader_class.cpp  Reader_class.h  Socket_class.cpp  Socket_class.h  Writer_class.cpp  Writer_class.h  main.cpp
Task_2/: CMakeLists.txt  Server_class.h  Socket_class.cpp  Socket_class.h  Srever_class.cpp  main.cpp
